# FRTester

./: .gitignore  CMakeLists.txt  main.cpp
cython/: driver.pyx  environment.pxd  environment.pyx  setup.py
cython/split/: driver.pxd  driver.pyx  environment.pxd  environment.pyx  header.txt
examples/Tests/: test_example.py  test_gear.py
examples/Triggers/: trigger_example.py  trigger_gear.py
include/: DriverHolder.h  FRDriver.h  TestDriverHolder.h
include/Abstract/: PhysicalInterface.h  Protocol.h
include/Executor/: TestLoggerWaiter.h  TestingExecutor.h
include/Implementation/: COMInterface.h  DefaultProtocol.h  TCPInterface.h  TestProtocol.h
include/Testing/: AbstractTest.h  AbstractTriggerTest.h  FROperations.h  SettingsSystem.h  StaticTestFabric.h  StaticTriggerFabric.h  TestCore.h  TestDataValue.h  TestDriver.h  TestEnvironment.h  TestGroups.h  TestLogger.h  TestingTools.h
include/Testing/ConnectionsManager/: COMConnection.h  Connection.h  ConnectionsManager.h  TCPConnection.h
include/Testing/ManualTests/: AbstractTestAction.h  Fabric.h  FabricRegistrator.h  ManualTest.h  ManualTestFabric.h  TestActionFabric.h
include/Testing/ManualTests/Actions/: BeepTestAction.h  BuyTestAction.cpp  BuyTestAction.h  CancelChechTestAction.cpp  CancelChechTestAction.h  CancelCheckTestAction.h  CashierReportTestAction.h  CloseCheckTestAction.cpp  CloseCheckTestAction.h  CutCheckTestAction.cpp  CutCheckTestAction.h  DocumentHeaderPrintTestAction.cpp  DocumentHeaderPrintTestAction.h  ExitIfTestAction.h  FontStringPrintTestAction.cpp  FontStringPrintTestAction.h  IfTestAction.h  LongStateRequestTestAction.h  NotifyWindowTestAction.h  OpenShiftTestAction.cpp  OpenShiftTestAction.h  PayinTestAction.h  PingTestAction.h  (+33 more)
include/Tools/: ByteArray.h  Codecs.h  GUIHelper.h  IPv4Address.h  Logger.h  LoggerProcessor.h  NetworkTools.h  ParsedLog.h  Settings.h  StableController.h  StdExtend.h  SystemTools.h  TTY.h  Time.h  TypeConverters.h  byte.h
include/Windows/: MainWindow.h
include/Windows/Controllers/: AbstractTabController.h  CommandsTabController.h  ConnectTabController.h  FNStateCommandsTabController.cpp  FNStateCommandsTabController.h  LogParserTabController.h  RootController.h  SettingsController.h  TablesTabController.h
include/Windows/Widgets/: QActionTreeWidgetItem.h  QBaseNumberLineEdit.h  QConnectionsListWidget.h  QConnectionsListWidgetItem.h  QHexLineEdit.h  QManualTestsListWidget.h  QNumberLineEdit.h  QTestActionsTreeWidget.h  QTestDisplayTreeWidget.h  QTestsTreeWidget.h  QTestsTreeWidgetMenu.h
libraries/: json.hpp
res/: resources.qrc
shared_libs/frdrvcross/: .gitignore  CMakeLists.txt  README.md  setup.py
shared_libs/frdrvcross/cython/: driver.cpp  driver.h  driver.pyx
shared_libs/frdrvcross/include/: FRDriver.h  main.cpp
shared_libs/frdrvcross/include/Abstract/: PhysicalInterface.h  Protocol.h
shared_libs/frdrvcross/include/Implementation/: COMInterface.h  DefaultProtocol.h  TCPInterface.h  TestProtocol.h  V2Protocol.h
shared_libs/frdrvcross/include/Tools/: ByteArray.h  ByteArrayReader.h  IPv4Address.h  NetworkTools.h  Platform.h  Time.h
shared_libs/frdrvcross/src/: FRDriver.cpp
shared_libs/frdrvcross/src/Abstract/: PhysicalInterface.cpp  Protocol.cpp
shared_libs/frdrvcross/src/Implementation/: COMInterface.cpp  DefaultProtocol.cpp  TCPInterface.cpp  V2Protocol.cpp
shared_libs/frdrvcross/src/Tools/: ByteArray.cpp  ByteArrayReader.cpp  IPv4Address.cpp  NetworkTools.cpp  SystemTools.cpp  TTY.cpp  Time.cpp
src/: DriverHolder.cpp  FRDriver.cpp  TestDriverHolder.cpp
src/Abstract/: PhysicalInterface.cpp
src/Executor/: TestLoggerWaiter.cpp  TestingExecutor.cpp
src/Implementation/: COMInterface.cpp  DefaultProtocol.cpp  TCPInterface.cpp  TestProtocol.cpp
src/Testing/: AbstractTest.cpp  AbstractTriggerTest.cpp  FROperations.cpp  SettingsSystem.cpp  TestCore.cpp  TestDataValue.cpp  TestDriver.cpp  TestEnvironment.cpp  TestLogger.cpp  TestingTools.cpp
src/Testing/ConnectionsManager/: COMConnection.cpp  Connection.cpp  ConnectionsManager.cpp  TCPConnection.cpp
src/Testing/ManualTests/: AbstractTestAction.cpp  Fabric.cpp  FabricRegistrator.cpp  ManualTest.cpp  ManualTestFabric.cpp
src/Tools/: ByteArray.cpp  ByteArrayReader.cpp  Codecs.cpp  GUIHelper.cpp  IPv4Address.cpp  Logger.cpp  LoggerProcessor.cpp  NetworkTools.cpp  ParsedLog.cpp  Settings.cpp  StableController.cpp  StdExtend.cpp  SystemTools.cpp  TTY.cpp  Time.cpp  TypeConverters.cpp
src/Windows/: ConnectTabController.cpp  MainWindow.cpp  RootController.cpp
src/Windows/ConnectControllers/: ConnectCOMTabController.cpp
src/Windows/Controllers/: AbstractTabController.cpp  CommandsTabController.cpp  ConnectTabController.cpp  FNFiscalisationTabController.cpp  FNStateCommandsTabController.cpp  LogParserTabController.cpp  SettingsController.cpp  TablesTabController.cpp
src/Windows/Widgets/: QActionTreeWidgetItem.cpp  QBaseNumberLineEdit.cpp  QConnectionsListWidget.cpp  QConnectionsListWidgetItem.cpp  QHexLineEdit.cpp  QManualTestsListWidget.cpp  QNumberLineEdit.cpp  QTestActionsTreeWidget.cpp  QTestDisplayTreeWidget.cpp  QTestsTreeWidget.cpp  QTestsTreeWidgetMenu.cpp
tests/Tests/: BarcodePrintingTest.cpp  BarcodePrintingTest.h  Bug0017479Test.cpp  Bug0017479Test.h  Bug0017483Test.cpp  Bug0017483Test.h  Bug0017515Test.cpp  Bug0017515Test.h  CheckFontTest.cpp  CheckFontTest.h  CheckLoaderTest.cpp  CheckLoaderTest.h  CrazyStatusRequestTest.cpp  CrazyStatusRequestTest.h  CycleTest.cpp  CycleTest.h  DocumentSyncTest.cpp  DocumentSyncTest.h  MagnitCheckTest.cpp  MagnitCheckTest.h  MessageBoxTest.cpp  MessageBoxTest.h  NonfiscalRequesting.cpp  NonfiscalRequesting.h  OperationTest.cpp  OperationTest.h  PythonTest.cpp  PythonTest.h  QuickMiniposTest.cpp  QuickMiniposTest.h  TableFiscalStorageLinesTest.cpp  TableFiscalStorageLinesTest.h  WriteShitCashierNameTest.cpp  WriteShitCashierNameTest.h
tests/Triggers/: CheckCloseTrigger.cpp  CheckCloseTrigger.h  OperationTrigger.cpp  OperationTrigger.h  PythonTrigger.cpp  PythonTrigger.h  ZReportTrigger.cpp  ZReportTrigger.h
ui/: mainwindow.ui
(+81 files in other folders)
